--- a/client/templates/ingreso.html
+++ b/client/templates/ingreso.html
@@ -17,7 +17,7 @@
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-	        <button type="button" class="btn btn-primary">Ingresar</button>
+	        <button type="submit" class="btn btn-primary">Ingresar</button>
 	      </div>
 	      </form>
 	    </div>
