--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -221,18 +221,33 @@ video{
     height: auto;
 }
 .square-material{
-    border-right: 2px solid #ddd;
-    border-radius: 3px;
     background: #f4f5f5;
-    margin-bottom: 10px;
 }
-.box-archivos{
-    background-color: #d5d5d5;
-    height: 150px;
-    overflow-y: auto;
+.chat{
+    background: #e7e7e7;
+    margin: 0 .5em;
+}
+.chat-title{
+    padding: .5em 0;
+    border-bottom: 1px solid #ccc;
+}
+.chat-body{
+    padding: .5em;
+    height: 230px;
+    overflow: auto;
+}
+.title-box-files{
+    background: #e7e7e7;
+    border-bottom: 1px solid #ccc;
+    padding: .5em 0;
+}
+.box-files{
+    background: #e7e7e7;
     margin-bottom: 15px;
-    overflow-x: hidden;
+    height: 50px;
+    overflow: auto;
 }
+
 .text-steelBlue{
     color: steelblue;
 }
@@ -244,30 +259,19 @@ video{
     background-color: #263238;
     color: #fff;
     margin-bottom: 3px;
-    border-radius: 8px;
+    
 }
 .other-user{
     background-color: #78909c;
     color: #fff;
     margin-bottom: 3px;
-    border-radius: 8px;
+    
 }
 
 .i-user p, .other-user p{
     margin-bottom: 1px; 
 }
 
-.box-chat{
-    background-color: #d5d5d5;
-    height: 150px;
-    margin-bottom: 15px;
-    padding: 1em;
-    padding-top: 0;
-}
-.mesages{
-    overflow-y: auto;
-    height: 83%;
-}
 /****/
 ::-webkit-scrollbar {
   width: 5px;
